--- a/practicas/practica-2.Rmd
+++ b/practicas/practica-2.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Práctica 2. Uso básico de software SIG de código abierto (QGIS + GRASS GIS + R + Python): derivar productos, estadística zonal."
+title: "Práctica 2. Uso básico de software SIG de código abierto (QGIS + GRASS GIS + R + Python): derivar productos, estadística zonal, simbología."
 author: José Ramón Martínez Batlle
 date: 29-08-2022
 output: github_document
@@ -12,6 +12,10 @@ editor_options:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = T, cache=F)
 ```
+
+# Fecha de entrega
+
+- 14 de octubre de 2022
 
 # Introducción
 
@@ -100,29 +104,34 @@ kable(criterios_eval, format="markdown")
 
 3. En un párrafo, compara el resultado obtenido a partir de cada uno de los dos software usados. Reflexiona al respecto sobre las diferencias o similitudes encontradas.
 
-Te regalo 20 puntos adicionales si respondes esta pregunta: ¿Es significativamente diferente el promedio de elevación de tu provincia respecto del de la provincia contenida en la capa `HE0jF91U.gpkg`.
+Te regalo 10 puntos adicionales si respondes esta pregunta: ¿Es significativamente diferente el promedio de elevación de tu provincia respecto del de la provincia contenida en la capa `HE0jF91U.gpkg`.
 
 ## Ejercicio 2. Genera información morfométrica a partir de un DEM y simboliza adecuadamente
 
+1. Obtén, mediante R o Python, el promedio de la pendiente, orientación (*aspect*), TPI y TRI de tu provincia. Para ello, necesitarás usar funciones que crean estos derivados a partir del DEM.
 
+2. Describe el procedimiento mediante un párrafo y auxiliándote de, máximo, dos capturas de pantalla.
+
+Te regalo 10 puntos adicionales si generas estos mismos derivados desde QGIS o GRASS GIS (aparte de en R o en Python).
 
 ## Ejercicio 3. Aplica simbología apropiadamente al ráster y al vectorial
 
-## Ejercicio 4. Genera una capa de geomórfonos y extrae las proporciones de cada uno para 
+1. En GRASS GIS o en QGIS, aplica una simbología apropiada para lograr que, de manera conjunta, el lienzo de mapa muestre el DEM dentro de la provincia coloreado de acuerdo a la elevación sobre el mapa de sombras y la provincia; fuera de la provincia debes hacer visible el mismo DEM (duplicándolo) pero sólo en modo sombras. Adicionalmente, añade alguna capa web de referencia territorial, por ejemplo, OpenStreetMap. Toma en cuenta que  ...
 
-1. Obtén 
+    - Las elevaciones deben colorearse de acuerdo al rango valores de tu provincia. Tendrás que recortar el DEM al ámbito de tu provincia (puedes hacerlo cortándolo efectivamente o usando un ráster virtual).
 
+    - Las capas superiores no pueden ocultar a las inferiores. Deberás usar modos de mezcla apropiados (algunas personas prefieren usar la transparencia, pero no se basa en el mismo principio).
+    
+    - EL límite de la provincia debe estar visible, pero también el interior de misma (relleno) debe destacarse con alguna coloración, por lo que también deberás usar un modo de mezcla apropiado. También sería apropiado destacar las elevaciones y las sombras sólo en el interior de la provincia usando "Polígono invertido".
+    
+2. Describe, en un párrafo, la topografía de tu provincia. Usa tus habilidades de descripción geográfica, por ejemplo, rangos de elevación, sectores con mayores o menores elevaciones o donde se concentran los áreas altas y bajas, si las hubiere. 
+    
+## Ejercicio 4. Genera una capa de geomórfonos y extrae las proporciones de cada geomórfono dentro de la provincia
 
-- Cargar distintas fuentes (rásters, vectoriales y delimitados).
+1. Usando GRASS GIS o QGIS, podrás generar los geomórfonos sólo de tu provincia.
 
-- Aplicar simbología.
+2. Extrae, con GRASS GIS o QGIS, las proporciones de cada geomórfono.
 
-- Derivar productos a partir de un modelo digital de elevaciones (DEM).
-
-- Extraer información geomorfológica a partir de un DEM y conservarla en un archivo vectorial.
-
-- Generar e interpretar un mapa de geomórfonos.
-
-
+3. Describe, en un párrafo, la distribución de los geomórfonos.
 
 # Referencias
