--- a/practicas/practica-2.Rmd
+++ b/practicas/practica-2.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Práctica 2. Uso básico de software SIG de código abierto (QGIS + GRASS GIS + R + Python): derivar productos, estadística zonal, simbología."
 author: José Ramón Martínez Batlle
-date: 03-|0-2022
+date: 03-10-2022
 output: github_document
 bibliography: ../ref/biblio.bib
 csl: ../ref/apa.csl
@@ -87,7 +87,7 @@ kable(criterios_eval, format="markdown")
 
 ## Ejercicio 1. Extrae estadísticos descriptivos
 
-1. Localiza la capa ráster `gtopo_30_arcsec.tif`, que es el DEM GTOPO30 ("30" se refiere al "espaciado", de 30 arco-segundos), el cual descargué para ti por medio del [EarthExplorer](https://earthexplorer.usgs.gov/)). Localiza tu capa vectorial en la lista de capas asignadas de la práctica 1, [aquí](practica-1.md#1a-instala-y-prueba-qgis); recuerda que las capas vectoriales se encuentran en el subdirectorio `d001` del directorio `data` del repo de [material de apoyo](https://github.com/geomorfologia-202202/material-de-apoyo), que es el repo desde donde, de hecho, estás leyendo este texto. Descarga dichos archivos a tu PC y, mediante dos software<sup>(1)</sup> de los instalados en la práctica 1, extrae los siguientes estadísticos descriptivos de la elevación:
+1. Localiza la capa ráster `gtopo_30_arcsec.tif` en el subdirectorio `d002` del directorio `data/`, que es el DEM GTOPO30 ("30" se refiere al "espaciado", de 30 arco-segundos), el cual descargué para ti por medio del [EarthExplorer](https://earthexplorer.usgs.gov/). Localiza tu capa vectorial en la lista de capas asignadas de la práctica 1, [aquí](practica-1.md#1a-instala-y-prueba-qgis); recuerda que las capas vectoriales se encuentran en el subdirectorio `d001` del directorio `data` del repo de [material de apoyo](https://github.com/geomorfologia-202202/material-de-apoyo), que es el repo desde donde, de hecho, estás leyendo este texto. Descarga dichos archivos a tu PC y, mediante dos software<sup>(1)</sup> de los instalados en la práctica 1, extrae los siguientes estadísticos descriptivos de la elevación:
 
 - Media
 - Mediana
@@ -99,12 +99,14 @@ kable(criterios_eval, format="markdown")
 <sup>(1)</sup>Sólo puedes combinar los dos software la siguiente manera:
 - QGIS con Python.
 - GRASS GIS con R
+- QGIS con R
+- GRASS GIS con Python
 
 2. Describe el procedimiento mediante un párrafo y auxiliándote de, máximo, dos capturas de pantalla.
 
 3. En un párrafo, compara el resultado obtenido a partir de cada uno de los dos software usados. Reflexiona al respecto sobre las diferencias o similitudes encontradas.
 
-Te regalo 10 puntos adicionales si respondes esta pregunta: ¿Es significativamente diferente el promedio de elevación de tu provincia respecto del de la provincia contenida en la capa `HE0jF91U.gpkg`.
+Te añado 20 puntos si respondes esta pregunta: ¿Es significativamente diferente el promedio de elevación de tu provincia respecto del de la provincia contenida en la capa `HE0jF91U.gpkg`.
 
 ## Ejercicio 2. Genera información morfométrica a partir de un DEM y simboliza adecuadamente
 
