--- a/ref/biblio.bib
+++ b/ref/biblio.bib
@@ -393,3 +393,12 @@
   url = {https://es.r4ds.hadley.nz/},
   year = 2019
 }
+
+@book{jeffrey2010,
+	title = {An introduction to GNSS: GPS, GLONASS, Galileo and other global navigation satellite systems},
+	author = {Jeffrey, Charles},
+	year = {2010},
+	date = {2010},
+	publisher = {NovAtel},
+	url = {https://novatel.com/an-introduction-to-gnss}
+}
