--- a/ref/biblio.bib
+++ b/ref/biblio.bib
@@ -395,7 +395,7 @@
 }
 
 @book{jeffrey2010,
-	title = {An introduction to GNSS: GPS, GLONASS, Galileo and other global navigation satellite systems},
+	title = {{An introduction to GNSS: GPS, GLONASS, Galileo and other global navigation satellite systems}},
 	author = {Jeffrey, Charles},
 	year = {2010},
 	date = {2010},
